# RAPIDD_for_DM

./: README.md  instructions_cmake  instructions_cmake.sh  pyRAPIDD.c  pyRAPIDD.pyx  setup.py
lib/: CMakeLists.txt  Makefile  RAPIDDConfig.h.in  main.c  main.h
lib/efficiency_tables/: Fig2_NRefficiency.txt  LZ_NR_2022.csv
lib/experiments/PANDAX/: efficiency.txt  pandaX8B.csv
lib/experiments/lz2022/: lz2022-bkgrd.csv  lz2022-data.csv
lib/source/: MenenFF.c  MenenFF.h  WriteData.c  WriteData.h  binning_general.c  binning_general.h  coeffs_eft.c  coeffs_eft.h  difCrosSec.c  difCrosSec.h  difRateGen.c  difRateGen.h  effFormFact.c  effFormFact.h  efficiency_curve.c  efficiency_curve.h  halo.c  halo.h  phys_consts.c  phys_consts.h  specific_exps.c  specific_exps.h
